WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30808
chromium test_shell crash in WebSocket when running LayoutTests
https://bugs.webkit.org/show_bug.cgi?id=30808
Summary
chromium test_shell crash in WebSocket when running LayoutTests
Fumitoshi Ukai
Reported
2009-10-27 00:08:11 PDT
When running LayoutTests by chromium test_shell, test_shell crashes in WebSocket code.
> test_shell.exe!WebCore::WebSocket::didClose() Line 216 + 0x70 bytes C++
test_shell.exe!WebCore::WebSocketChannel::didClose(WebCore::SocketStreamHandle * handle=0x03dc01f0) Line 135 + 0x9 bytes C++ test_shell.exe!WebCore::SocketStreamHandleInternal::didClose(WebKit::WebSocketStreamHandle * socketHandle=0x018ffeb8) Line 186 + 0xb bytes C++ test_shell.exe!webkit_glue::WebSocketStreamHandleImpl::Context::DidClose(WebKit::WebSocketStreamHandle * web_handle=0x03f8ec00) Line 144 C++ test_shell.exe!`anonymous namespace'::WebSocketStreamHandleBridgeImpl::DoOnClose() Line 213 C++ test_shell.exe!MessageLoop::RunTask(Task * task=0x03e88a68) Line 315 C++ test_shell.exe!MessageLoop::DoWork() Line 437 C++ test_shell.exe!base::MessagePumpForUI::DoRunLoop() Line 210 C++
Attachments
Fix crash found in chromium test_shell.
(5.48 KB, patch)
2009-10-27 00:45 PDT
,
Fumitoshi Ukai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fumitoshi Ukai
Comment 1
2009-10-27 00:45:23 PDT
Created
attachment 41934
[details]
Fix crash found in chromium test_shell.
Dimitri Glazkov (Google)
Comment 2
2009-10-27 07:50:22 PDT
Comment on
attachment 41934
[details]
Fix crash found in chromium test_shell. It would be great to capture this in a layout test. r=me because I'd like to get rid of the sporadic crashing on buildbots, but please follow up and write a test for it.
Dimitri Glazkov (Google)
Comment 3
2009-10-27 08:30:38 PDT
Comment on
attachment 41934
[details]
Fix crash found in chromium test_shell. cq ftw!
WebKit Commit Bot
Comment 4
2009-10-27 10:00:58 PDT
Comment on
attachment 41934
[details]
Fix crash found in chromium test_shell. Clearing flags on attachment: 41934 Committed
r50155
: <
http://trac.webkit.org/changeset/50155
>
WebKit Commit Bot
Comment 5
2009-10-27 10:01:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug